--- a/src/components/card/header/header.css
+++ b/src/components/card/header/header.css
@@ -1,5 +1,5 @@
 .card-header {
-  @apply p-4  rounded-t-lg text-center font-bold text-white;
+  @apply p-8 rounded-t-lg text-center font-bold text-white;
 
   &.purple {
     @apply bg-purple-200;
